--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,8 @@
 ---
-- name: Setup Exim and dependencies
+- name: Setup Docker and dependencies
   hosts: all
   gather_facts: yes
   become: true
 
   roles:
-    - exim
+    - docker
